tests/type_param_scope/type_param_scope.exp
Error ------------------------------------------------------------ class.js:4:12

Cannot call `this.b` with `a` bound to `x` because `A` [1] is incompatible with
`T` [2].


Error ---------------------------------------------------- default_params.js:6:7

Cannot call `h` with `c` bound to `d` because `T` [1] is incompatible with
`U` [2].


Error --------------------------------------------------- default_params.js:10:7

Cannot call `g` with `0` bound to `c` because number [1] is incompatible with
`T` [2].


Error: method_shadow.js:42
 42: g.m(true); // err, bool ~> number|string
         ^^^^ boolean. This type is incompatible with the bound on type parameter `T`:
 40: declare var g: G<number|string>;
                      ^^^^^^^^^^^^^ union: number | string
  Member 1:
   40: declare var g: G<number|string>;
                        ^^^^^^ number
  Error:
   42: g.m(true); // err, bool ~> number|string
           ^^^^ boolean. This type is incompatible with
   40: declare var g: G<number|string>;
                        ^^^^^^ number
  Member 2:
   40: declare var g: G<number|string>;
                               ^^^^^^ string
  Error:
   42: g.m(true); // err, bool ~> number|string
           ^^^^ boolean. This type is incompatible with
   40: declare var g: G<number|string>;
                               ^^^^^^ string

Error ---------------------------------------------------- method_shadow.js:43:6

Cannot cast `g.m(...)` to `G` because in type argument `T`, string [1] is
incompatible with number [2].


Error --------------------------------------------------- method_shadow.js:51:18

Cannot assign `x` to `this.x` because `T` [1] is incompatible with `T` [2].



Found 6 errors
